scss/partials/_topic.scss
div.topic-list {

  div.topic {
    margin-left: 0px;
    margin-right: 0px;
    padding: 15px;
    margin-bottom: 10px;
    min-height: 100px;
    border-bottom: 1px solid #DFDFDF; /* gray */
    background-color: white;

    div.topic-header {

      .topic-image {
        width: 30px;
        height: 30px;
        float: left;
      }

      div.topic-title {
        float: left;
        margin-left: 5px;
        font-size: 19px;
        font-weight: bold;
        color: #2d2d2d;
      }
    }

    div.topic-headline {
      font-size: 17px;
      padding: 5px 0px;
      width: 100%;
      color: #2d2d2d;

      &.collapse {
        height: 0px;
      }

      &.chart-header-container {
        div.actual-container {
          h3 {
            margin: 5px 0;
          }
        }
      }

      &.topic-headline-growth {

        div.chart-header-container {
          h3.actual {
            margin: 0px;
          }
        }

        div.charts {
          height: 50px;
          width: 400px;

          div.chart-container.column-chart {
            height: 50px;
            width: 100%;
          }
        }
      }
    }

    div.topic-more {
      text-align: center;

      img {
        width: 20px;
        height: 20px;
      }
    }

    div.topic-date {
      font-size: 12px;
      font-style: italic;
      color: #A6A6A3; /* gray */

      label {
        margin: 0px;
        font-weight: normal;
      }
    }

    div.topic-body {
      position: relative;
      overflow: hidden;


      color: #191919;
      border: 1px solid transparent;
      font-weight: normal;
      font-size: 15px;

      &:focus,
      &.editing {
        outline: none;
        overflow: hidden;
        cursor: text;
        border: 1px solid black;
      }

      img {
        max-width: 98%;
      }

      ul img {
        max-width: 98%;
      }

      ul ul img {
        max-width: 98%;
      }

      p {
         font-weight: normal;
         font-size: 15px;
      }

      h1, h3 {
        font-weight: 600;
        font-size: 17px; 
      }

      &.no-data {
        color: rgba(0, 0, 0, 0.4);
      }

      *::selection {
        background: #C1E7F4;
      }

      *::-moz-selection {
        background: #C1E7F4;
      }

      a {
        font-weight: bold;
        text-decoration: underline;
        color: black;
      }

      &.expanded {
        height: auto;
      }
    }
  }
}

